# sudoku

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
test_data/: test1.txt  test2_hard.txt  test3_empty.txt
